copy-paste issue and deploy script

--- a/kresd.conf
+++ b/kresd.conf
@@ -20,7 +20,6 @@ view:addr('0.0.0.0/0', policy.suffix(policy.DROP, policy.todnames({'mesh', '10.i
 
 -- Send mesh request to authorative server
 -- Override RFC6761 policies by placing forward rule first
-local privatenet = policy.add(policy.suffix(policy.FORWARD('10.10.10.11'), policy.todnames({'mesh', '10.in-addr.arpa', '59.167.199.in-addr.ar
-pa'})))
+local privatenet = policy.add(policy.suffix(policy.FORWARD('10.10.10.11'), policy.todnames({'mesh', '10.in-addr.arpa', '59.167.199.in-addr.arpa'})))
 policy.del(privatenet)
 table.insert(policy.rules,1,privatenet)
