adding public ip range to kresd config

--- a/kresd.conf
+++ b/kresd.conf
@@ -13,6 +13,7 @@ modules = { 'policy', 'view' }
 -- Allow mesh from internal
 view:addr('10.0.0.0/8', policy.suffix(policy.PASS, policy.todnames({'mesh', '10.in-addr.arpa', '59.167.199.in-addr.arpa'})))
 view:addr('127.0.0.0/8', policy.suffix(policy.PASS, policy.todnames({'mesh', '10.in-addr.arpa', '59.167.199.in-addr.arpa'})))
+view:addr('199.167.59.0/24', policy.suffix(policy.PASS, policy.todnames({'mesh', '10.in-addr.arpa', '59.167.199.in-addr.arpa'})))
 view:addr('0.0.0.0/0', policy.suffix(policy.DROP, policy.todnames({'mesh', '10.in-addr.arpa', '59.167.199.in-addr.arpa'})))
 
 -- Override allow all 
