Allowing new zone

--- a/knot.conf
+++ b/knot.conf
@@ -18,5 +18,7 @@ template:
 
 zone:
   - domain: mesh
+  - domain: mesh.nycmesh.net
+    file: mesh.zone
   - domain: 10.in-addr.arpa
   - domain: 59.167.199.in-addr.arpa
