--- a/kresd.conf
+++ b/kresd.conf
@@ -1,5 +1,5 @@
 -- Bind ports as privileged user (root) --
-net = { '10.10.10.10', '199.167.59.10' }
+net = { '10.10.10.10', '199.167.59.10', 'fdff:1508:6410::1010' }
 -- Switch to unprivileged user --
 user('knot-resolver','knot-resolver')
 -- Unprivileged
@@ -14,6 +14,7 @@ modules = { 'policy', 'view' }
 view:addr('10.0.0.0/8', policy.suffix(policy.PASS, policy.todnames({'mesh', '10.in-addr.arpa', '59.167.199.in-addr.arpa'})))
 view:addr('127.0.0.0/8', policy.suffix(policy.PASS, policy.todnames({'mesh', '10.in-addr.arpa', '59.167.199.in-addr.arpa'})))
 view:addr('199.167.59.0/24', policy.suffix(policy.PASS, policy.todnames({'mesh', '10.in-addr.arpa', '59.167.199.in-addr.arpa'})))
+view:addr('fdff:1508:6410::/48', policy.suffix(policy.PASS, policy.todnames({'mesh', '10.in-addr.arpa', '59.167.199.in-addr.arpa'})))
 view:addr('0.0.0.0/0', policy.suffix(policy.DROP, policy.todnames({'mesh', '10.in-addr.arpa', '59.167.199.in-addr.arpa'})))
 
 -- Override allow all 
@@ -21,6 +22,6 @@ view:addr('0.0.0.0/0', policy.suffix(policy.DROP, policy.todnames({'mesh', '10.i
 
 -- Send mesh request to authorative server
 -- Override RFC6761 policies by placing forward rule first
-local privatenet = policy.add(policy.suffix(policy.FORWARD('10.10.10.11'), policy.todnames({'mesh', '10.in-addr.arpa', '59.167.199.in-addr.arpa'})))
+local privatenet = policy.add(policy.suffix(policy.FORWARD('10.10.10.11'), policy.todnames({'mesh', 'mesh.nycmesh.net', '10.in-addr.arpa', '59.167.199.in-addr.arpa'})))
 policy.del(privatenet)
 table.insert(policy.rules,1,privatenet)
