--- a/kresd.conf
+++ b/kresd.conf
@@ -42,7 +42,7 @@ view:addr('0.0.0.0/0', policy.suffix(policy.DROP, policy.todnames({'mesh', '10.i
 -- end old method
 
 -- Authoritative response for our zones
-policy.add(policy.suffix(AA(policy.STUB('10.10.10.11')), policy.todnames({'mesh', 'mesh.nycmesh.net', '10.in-addr.arpa', '59.167.199.in-addr.arpa'})))
+-- policy.add(policy.suffix(AA(policy.STUB('10.10.10.11')), policy.todnames({'mesh', 'mesh.nycmesh.net', '10.in-addr.arpa', '59.167.199.in-addr.arpa'})))
 
 -- Old non-authoritative response
--- policy.add(policy.suffix(policy.FORWARD('10.10.10.11'), policy.todnames({'mesh', 'mesh.nycmesh.net', '10.in-addr.arpa', '59.167.199.in-addr.arpa'})))
+policy.add(policy.suffix(policy.STUB('10.10.10.11'), policy.todnames({'mesh', 'mesh.nycmesh.net', '10.in-addr.arpa', '59.167.199.in-addr.arpa'})))
