--- a/infra/ansible/roles/knot-authoritative/tasks/main.yaml
+++ b/infra/ansible/roles/knot-authoritative/tasks/main.yaml
@@ -60,7 +60,7 @@
 - name: Crontab
   ansible.builtin.lineinfile:
     path: /etc/cron.d/knot_zone_update
-    line: "*/10 * * * *   root    cd /root/nycmesh-dns && /root/nycmesh-dns/../jank_deploy.sh 2>&1 > /dev/null"
+    line: "*/10 * * * *   root    cd /root/nycmesh-dns && bash /root/nycmesh-dns/deploy_gordian_knot.sh 2>&1 > /dev/null"
     create: true
   become: true
 
