--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -69,7 +69,7 @@ jobs:
       - name: Terraform plan
         id: plan
         if: github.event_name == 'pull_request'
-        run: terraform plan -no-color -input=false
+        run: terraform plan -no-color -var-file=jon.tfvars -input=false
         continue-on-error: true
         working-directory: ./infra/terraform/
 
@@ -106,7 +106,7 @@ jobs:
       
       - name: Terraform Apply
         if: github.ref == 'refs/heads/james/infra2' && github.event_name == 'push'
-        run: terraform apply -auto-approve -input=false
+        run: terraform apply -auto-approve -var-file=jon.tfvars -input=false
         working-directory: ./infra/terraform/
       
       - name: Run playbook
