--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -107,6 +107,7 @@ jobs:
       - name: Terraform Apply
         if: github.ref == 'refs/heads/james/infra2' && github.event_name == 'push'
         run: |
+          umask 022
           echo "$TF_VAR_MESH_DNS_SSH_KEY" > dns_ed25519
           echo "$TF_VAR_MESH_DNS_PUB_KEY" > dns_ed25519.pub
           terraform apply -auto-approve -var-file=jon.tfvars -input=false
