--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -23,7 +23,7 @@ env:
   BUCKET_TF_STATE: ${{ secrets.BUCKET_TF_STATE}}
 
 jobs:
-  wireguard_example:
+  deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -107,9 +107,10 @@ jobs:
       - name: Terraform Apply
         if: github.ref == 'refs/heads/james/infra2' && github.event_name == 'push'
         run: |
-          umask 022
           echo "$TF_VAR_MESH_DNS_SSH_KEY" > dns_ed25519
           echo "$TF_VAR_MESH_DNS_PUB_KEY" > dns_ed25519.pub
+          chomod 600 dns_ed25519
+          chomod 600 dns_ed25519.pub
           terraform apply -auto-approve -var-file=jon.tfvars -input=false
         working-directory: ./infra/terraform/
       
