--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -109,8 +109,8 @@ jobs:
         run: |
           echo "$TF_VAR_MESH_DNS_SSH_KEY" > dns_ed25519
           echo "$TF_VAR_MESH_DNS_PUB_KEY" > dns_ed25519.pub
-          chomod 600 dns_ed25519
-          chomod 600 dns_ed25519.pub
+          chmod 600 dns_ed25519
+          chmod 600 dns_ed25519.pub
           terraform apply -auto-approve -var-file=jon.tfvars -input=false
         working-directory: ./infra/terraform/
       
