--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -15,7 +15,8 @@ env:
   # Secrets
   TF_VAR_PROXMOX_TOKEN_ID: ${{ secrets.TF_VAR_PROXMOX_TOKEN_ID }}
   TF_VAR_PROXMOX_TOKEN_SECRET: ${{ secrets.TF_VAR_PROXMOX_TOKEN_SECRET }}
-  TF_VAR_MESH_DNS_LOCAL_PASSWORD: ${{ secrets.TF_VAR_MESH_DNS_LOCAL_PASSWORD }} 
+  TF_VAR_MESH_DNS_LOCAL_PASSWORD: ${{ secrets.TF_VAR_MESH_DNS_LOCAL_PASSWORD }}
+  TF_VAR_INFLUX_DB_TOKEN: ${{ secrets.TF_VAR_INFLUX_DB_TOKEN }}
   # Credentials for deployment to AWS
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
