--- a/infra/ansible/roles/knot-recursive/tasks/telegraf.yaml
+++ b/infra/ansible/roles/knot-recursive/tasks/telegraf.yaml
@@ -11,9 +11,16 @@
     dest: /root/influxdata-archive_compat.key
   become: true
 
+- name: Check influx gpg key
+  ansible.builtin.command:
+    chdir: /root
+    cmd: bash -c "echo '393e8779c89ac8d958f81f942f9ad7fb82a25e133faddaf92e15b16e6ac9ce4c influxdata-archive_compat.key' | sha256sum -c"
+  become: true
+
 - name: Add influx gpg key
   ansible.builtin.command:
-    cmd: bash -c "cd /root && echo '393e8779c89ac8d958f81f942f9ad7fb82a25e133faddaf92e15b16e6ac9ce4c influxdata-archive_compat.key' | sha256sum -c && cat influxdata-archive_compat.key | gpg --dearmor > /etc/apt/trusted.gpg.d/influxdata-archive_compat.gpg"
+    chdir: /root
+    cmd: bash -c "cat influxdata-archive_compat.key | gpg --dearmor > /etc/apt/trusted.gpg.d/influxdata-archive_compat.gpg"
     creates: /etc/apt/trusted.gpg.d/influxdata-archive_compat.gpg
   become: true
 
