--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -70,7 +70,7 @@ jobs:
       - name: Terraform plan
         id: plan
         if: github.event_name == 'pull_request'
-        run: terraform plan -no-color -var-file=jon.tfvars -input=false
+        run: terraform plan -no-color -input=false
         continue-on-error: true
         working-directory: ./infra/terraform/
 
@@ -112,7 +112,7 @@ jobs:
           echo "${{ secrets.TF_VAR_MESH_DNS_PUB_KEY }}" > dns_ed25519.pub
           chmod 600 dns_ed25519
           chmod 600 dns_ed25519.pub
-          terraform apply -auto-approve -var-file=jon.tfvars -input=false
+          terraform apply -auto-approve -input=false
         working-directory: ./infra/terraform/
       
       - name: Run playbook
