--- a/infra/ansible/roles/dns-frr/tasks/main.yaml
+++ b/infra/ansible/roles/dns-frr/tasks/main.yaml
@@ -75,6 +75,18 @@
     reload: true
   become: true
 
+- name: Allow restarting of frr
+  ansible.builtin.lineinfile:
+    path: /lib/systemd/system/frr.service
+    search_string: Restart=
+    line: "Restart=always"
+  become: true
+
+- name: Systemd daemon reload
+  ansible.builtin.command:
+    cmd: systemctl daemon-reload
+  become: true
+
 - name: Restart and enable frr service
   ansible.builtin.service:
     name: frr
