--- a/infra/ansible/dns_server.yaml
+++ b/infra/ansible/dns_server.yaml
@@ -1,11 +1,13 @@
 - hosts: knot-authoritative
   roles:
+    - role: dns-ssh
     - role: dns-frr
     - role: dns-telegraf
     - role: knot-authoritative
 
 - hosts: knot-recursive
   roles:
+    - role: dns-ssh
     - role: dns-frr
     - role: dns-telegraf
     - role: knot-recursive
