lol rate limits

--- a/.github/workflows/sld_terraform.yaml
+++ b/.github/workflows/sld_terraform.yaml
@@ -18,7 +18,7 @@ defaults:
 
 env:
   # verbosity setting for Terraform logs
-  TF_LOG: INFO
+  #TF_LOG: INFO
   # Credentials for name dot com
   TF_VAR_name_dot_com_user: ${{ secrets.TF_VAR_name_dot_com_user }}
   TF_VAR_name_dot_com_token: ${{ secrets.TF_VAR_name_dot_com_token }}
@@ -56,8 +56,8 @@ jobs:
       
       - name: Terraform plan
         if: github.ref == 'refs/heads/james/iac' && github.event_name == 'push'
-        run: terraform plan -no-color -input=false
+        run: terraform plan -no-color -input=false -parallelism=1
 
       - name: Terraform Apply
         if: github.ref == 'refs/heads/master' && github.event_name == 'push'
-        run: terraform apply -auto-approve -input=false
+        run: terraform apply -auto-approve -input=false -parallelism=1
