--- a/infra/ansible/roles/dns-frr/tasks/main.yaml
+++ b/infra/ansible/roles/dns-frr/tasks/main.yaml
@@ -6,21 +6,18 @@
       - iptables-persistent
       - frr
       - cron
-  become: true
 
 - name: dummy0 interface
   ansible.builtin.template:
     src: ../templates/netplan_dummy0.yaml.j2
     dest: /etc/netplan/dummy0.yaml
     mode: "640"
-  become: true
 
 - name: dummy1 interface
   ansible.builtin.template:
     src: ../templates/netplan_dummy1.yaml.j2
     dest: /etc/netplan/dummy1.yaml
     mode: "640"
-  become: true
   when: EXTERNAL_LISTEN_IP != ""
 
 - name: eth0 interface
@@ -28,44 +25,37 @@
     src: ../templates/netplan_50_cloud_init.yaml.j2
     dest: /etc/netplan/50-cloud-init.yaml
     mode: "640"
-  become: true
 
 - name: Enable ospfd
   ansible.builtin.lineinfile:
     path: /etc/frr/daemons
     search_string: ospfd=no
     line: "ospfd=yes"
-  become: true
 
 - name: Config template frr
   ansible.builtin.template:
     src: ../templates/frr.conf.j2
     dest: /etc/frr/frr.conf
-  become: true
 
 - name: Iptables rules
   ansible.builtin.template:
     src: ../templates/iptables.j2
     dest: /etc/iptables/rules.v4
-  become: true
 
 - name: Restore iptables rules
   ansible.builtin.command:
     cmd: "bash -c '/sbin/iptables-restore < /etc/iptables/rules.v4'"
-  become: true
 
 - name: Netplan apply
   ansible.builtin.command:
     cmd: "bash -c 'netplan apply && touch /tmp/netplan_applied'"
     creates: /tmp/netplan_applied
-  become: true
 
 - name: Restart and enable iptables service
   ansible.builtin.service:
     name: netfilter-persistent
     state: restarted
     enabled: true
-  become: true
 
 - name: net.ipv4.ip_forward
   ansible.posix.sysctl:
@@ -74,42 +64,32 @@
     sysctl_set: true
     state: present
     reload: true
-  become: true
 
 - name: Allow restarting of frr
   ansible.builtin.lineinfile:
     path: /lib/systemd/system/frr.service
     search_string: Restart=
     line: "Restart=always"
-  become: true
 
-- name: Systemd daemon reload
-  ansible.builtin.command:
-    cmd: systemctl daemon-reload
-  become: true
+- name: Restart and enable frr service
+  ansible.builtin.systemd_service:
+    name: frr
+    state: restarted
+    enabled: true
+    daemon_reload: true
 
 - name: Crontab
   ansible.builtin.lineinfile:
     path: /etc/cron.d/frr_reload
     line: "28 */3 * * *   root    systemctl restart frr.service"
     create: true
-  become: true
 
 - name: Restart and enable cron service
-  ansible.builtin.service:
+  ansible.builtin.systemd_service:
+    state: restarted
     name: cron
-    state: restarted
     enabled: true
-  become: true
-
-- name: Restart and enable frr service
-  ansible.builtin.service:
-    name: frr
-    state: restarted
-    enabled: true
-  become: true
 
 - name: apply net.ipv4.ip_forward
   ansible.builtin.command:
     cmd: sysctl -w net.ipv4.ip_forward=1
-  become: true
