--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -5,6 +5,7 @@ on:
     branches:
       - master
       - james/infra3 # JBOTODO: cleanup
+      #- james/infra4 # JBOTODO: cleanup
     paths:
       - infra/**
   workflow_dispatch:
@@ -28,61 +29,20 @@ env:
   BUCKET_TF_STATE: ${{ secrets.BUCKET_TF_STATE}}
 
 jobs:
-  deploy:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@a5ac7e51b41094c92402da3b24376905380afc29 # @v4
-      
-      - uses: actions/setup-python@82c7e631bb3cdc910f68e0081d67478d79c6982d #@v5
-        with:
-          python-version: '3.11'
-      
-      - name: Setup ansible
-        run: pip install ansible && export PATH="$HOME/.local/bin:$PATH" && ansible-galaxy collection install cloud.terraform
+  deploy_jon:
+    name: Deploy to jon
+    uses: ./.github/workflows/deploy_dns_environment.yaml
+    with:
+      environment: dev_jon
+    secrets: inherit
+    if: github.ref == 'refs/heads/james/infra4' && github.event_name == 'push'
+    #if: github.ref == 'refs/heads/master' && github.event_name == 'push'
 
-      - name: Setup Terraform with specified version on the runner
-        uses: hashicorp/setup-terraform@651471c36a6092792c552e8b1bef71e592b462d8 # @v3
-        with:
-          terraform_version: 1.8.3
-
-      - name: Terraform init
-        id: init
-        run: terraform init -backend-config="bucket=$BUCKET_TF_STATE"
-        working-directory: ./infra/terraform/
-
-      - name: Terraform format
-        id: fmt
-        run: terraform fmt -check
-        working-directory: ./infra/terraform/
-    
-      - name: Terraform validate
-        id: validate
-        run: terraform validate
-        working-directory: ./infra/terraform/
-
-      - name: Setup WireGuard
-        run:  |
-          sudo apt-get update && sudo apt-get install -y wireguard
-          echo "${{ secrets.WIREGUARD_PRIVATE_KEY }}" > privatekey
-          sudo ip link add dev wg0 type wireguard
-          sudo ip address add dev wg0 ${{ secrets.WIREGUARD_OVERLAY_NETWORK_IP }} peer ${{ secrets.WIREGUARD_PEER }}
-          sudo wg set wg0 listen-port 48123 private-key privatekey peer ${{ secrets.WIREGUARD_PEER_PUBLIC_KEY }} allowed-ips 0.0.0.0/0 endpoint ${{ secrets.WIREGUARD_ENDPOINT }}
-          sudo ip link set up dev wg0
-          rm privatekey
-      
-      - name: Terraform Apply
-        # JBOTODO: Cleanup
-        if: github.ref == 'refs/heads/james/infra3' && github.event_name == 'push'
-        run: |
-          echo "${{ secrets.TF_VAR_MESH_DNS_SSH_KEY }}" > dns_ed25519
-          echo "${{ secrets.TF_VAR_MESH_DNS_PUB_KEY }}" > dns_ed25519.pub
-          chmod 600 dns_ed25519
-          chmod 600 dns_ed25519.pub
-          terraform apply -auto-approve -input=false
-        working-directory: ./infra/terraform/
-      
-      - name: Run playbook
-        if: github.ref == 'refs/heads/james/infra3' && github.event_name == 'push'
-        run: sleep 10 && export PATH="$HOME/.local/bin:$PATH" && ansible-playbook -i inventory.yaml dns_server.yaml
-        working-directory: ./infra/ansible/
+  deploy_sn3_prod:
+    name: Deploy to sn3 prod
+    uses: ./.github/workflows/deploy_dns_environment.yaml
+    with:
+      environment: sn3_prod
+    secrets: inherit
+    #if: github.ref == 'refs/heads/james/infra4' && github.event_name == 'push'
+    if: github.ref == 'refs/heads/master' && github.event_name == 'push'
