--- a/.github/workflows/deploy_dns_environment.yaml
+++ b/.github/workflows/deploy_dns_environment.yaml
@@ -11,6 +11,7 @@ permissions: read-all
 
 env:
   # Secrets
+  TF_VAR_proxmox_host: ${{ secrets.TF_VAR_PROXMOX_HOST }}
   TF_VAR_PROXMOX_TOKEN_ID: ${{ secrets.TF_VAR_PROXMOX_TOKEN_ID }}
   TF_VAR_PROXMOX_TOKEN_SECRET: ${{ secrets.TF_VAR_PROXMOX_TOKEN_SECRET }}
   TF_VAR_MESH_DNS_LOCAL_PASSWORD: ${{ secrets.TF_VAR_MESH_DNS_LOCAL_PASSWORD }}
@@ -51,9 +52,15 @@ jobs:
           sudo ip link set up dev wg0
           rm privatekey
 
+      - name: Setup backend
+        run: |
+          echo "bucket = \"$BUCKET_TF_STATE\"" > backend.tfvars
+          echo "key    = \"terraform/state/dns-${{ vars.ENV_NAME }}.tfstate\"" >> backend.tfvars
+        working-directory: ./infra/terraform/
+
       - name: Terraform init
         id: init
-        run: terraform init -backend-config="bucket=$BUCKET_TF_STATE"
+        run: terraform init -backend-config=backend.tfvars
         working-directory: ./infra/terraform/
     
       - name: Terraform validate
@@ -66,7 +73,7 @@ jobs:
           echo "${{ secrets.TF_VAR_MESH_DNS_PUB_KEY }}" > dns_ed25519.pub
           chmod 600 dns_ed25519
           chmod 600 dns_ed25519.pub
-          terraform apply -auto-approve -input=false
+          terraform apply -auto-approve -input=false -var-file=${{ vars.ENV_NAME }}.tfvars
         working-directory: ./infra/terraform/
       
       - name: Run playbook
