--- a/infra/ansible/roles/knot-recursive/tasks/main.yaml
+++ b/infra/ansible/roles/knot-recursive/tasks/main.yaml
@@ -15,18 +15,8 @@
 - name: Add package source
   ansible.builtin.lineinfile:
     path: /etc/apt/sources.list.d/cznic-labs-knot-dns.list
-    line: "deb [signed-by=/usr/share/keyrings/cznic-labs-pkg.gpg] https://pkg.labs.nic.cz/knot-dns bookworm main"
+    line: "deb [signed-by=/usr/share/keyrings/cznic-labs-pkg.gpg] https://pkg.labs.nic.cz/knot-resolver bookworm main"
     create: true
-
-- name: Add knot-resolver-release
-  ansible.builtin.get_url:
-    url: https://secure.nic.cz/files/knot-resolver/knot-resolver-release.deb
-    dest: /root/knot-resolver-release.deb
-
-- name: Install knot-resolver-release
-  ansible.builtin.apt:
-    lock_timeout: 120
-    deb: /root/knot-resolver-release.deb
 
 - name: Install knot
   ansible.builtin.apt:
