--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -28,7 +28,7 @@ jobs:
     uses: ./.github/workflows/deploy_dns_environment.yaml
     needs: deploy_jon
     with:
-      environment: sn3_prod
+      environment: prod_sn3
     secrets: inherit
     if: github.ref == 'refs/heads/james/infra4' && github.event_name == 'push'
     # if: github.ref == 'refs/heads/master' && github.event_name == 'push'
