--- a/infra/ansible/roles/dns-telegraf/tasks/datadog.yaml
+++ b/infra/ansible/roles/dns-telegraf/tasks/datadog.yaml
@@ -7,9 +7,23 @@
     datadog_config:
       logs_enabled: true
 
+- name: Adding dd-agent to systemd-journal 
+  ansible.builtin.user:
+    name: dd-agent
+    groups: systemd-journal
+    append: true
+    create_home: false
+
 - name: Datadog logging config
   ansible.builtin.copy:
     src: files/journald.d_conf.yaml
     dest: /etc/datadog-agent/conf.d/journald.d/conf.yaml
     owner: dd-agent
     group: dd-agent
+
+- name: Reload datadog
+  ansible.builtin.systemd_service:
+    name: datadog-agent
+    state: restarted
+    enabled: true
+    daemon_reload: true
