--- a/.github/workflows/deploy_dns_environment.yaml
+++ b/.github/workflows/deploy_dns_environment.yaml
@@ -17,6 +17,7 @@ env:
   TF_VAR_mesh_dns_local_password: ${{ secrets.TF_VAR_MESH_DNS_LOCAL_PASSWORD }}
   TF_VAR_influx_db_token: ${{ secrets.TF_VAR_INFLUX_DB_TOKEN }}
   TF_VAR_datadog_api_key: ${{ secrets.TF_VAR_DATADOG_API_KEY }}
+  TF_VAR_dns_cookie_secret: "${{ secrets.TF_VAR_DNS_COOKIE_SECRET }}"
   # Credentials for deployment to AWS
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
